@@ -20,7 +20,10 @@
 #   Steve Grubb <sgrubb@redhat.com>
 #
 
-SUBDIRS = src bindings utils m4 docs
+SUBDIRS = src utils m4 docs
+if HAVE_SWIG
+SUBDIRS += bindings
+endif
 EXTRA_DIST = ChangeLog AUTHORS NEWS README INSTALL COPYING COPYING.LIB \
 	libcap-ng.spec autogen.sh 
 
